unpackaged/main/default/objects/CS_Billing_Schedule__c/CS_Billing_Schedule__c.object-meta.xml
<CustomObject>
    <label>Billing Schedule</label>
    <nameField>
        <displayFormat>BIL-{00000000}</displayFormat>
        <label>Billing Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>