unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Billing_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Billing_on_Hold__c</fullName>
    <description>Indicates if any Billing Schedule Items are On Hold</description>
    <inlineHelpText>Indicates if any Billing Schedule Items are On Hold</inlineHelpText>
    <label>Billing on Hold</label>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Manual_Hold__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>