unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Billing_Schedule_Items_Pending_Count__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Items_Pending_Count__c</fullName>
    <description>Rollup Count of BSIs with Status = Pending</description>
    <inlineHelpText>Rollup Count of BSIs with Status = Pending</inlineHelpText>
    <label>Billing Schedule Items Pending Count</label>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>