unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/CS_Sales_Order_Schedule__c.field-meta.xml
<CustomField>
    <fullName>CS_Sales_Order_Schedule__c</fullName>
    <label>CS Sales Order Schedule</label>
    <referenceTo>CS_Sales_Order_Schedule__c</referenceTo>
    <relationshipName>Billing_Schedule_Headers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>