unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Last_Billing_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Last_Billing_Period_End__c</fullName>
    <description>Indicates the Last Billing Period Date</description>
    <inlineHelpText>Indicates the Last Billing Period Date</inlineHelpText>
    <label>Last Billing Period End</label>
    <summarizedField>CS_Billing_Schedule_Item__c.Billing_Period_End_Date__c</summarizedField>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>