unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Last_Closed_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Last_Closed_Period_End__c</fullName>
    <label>Last Closed Period End</label>
    <summarizedField>CS_Billing_Schedule_Item__c.Billing_Period_End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Is_Closed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>