unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Date__c</fullName>
    <label>Next Billing Date</label>
    <summarizedField>CS_Billing_Schedule_Item__c.Billing_Date__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>