unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Open_After_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_After_Billing_Date__c</fullName>
    <label>Open After Billing Date</label>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>