unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Pending_Forecast_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>Pending_Forecast_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the Billing Schedule forecast requires recalculation after the records have been exported to Finance systems.</description>
    <inlineHelpText>Specifies if the Billing Schedule forecast requires recalculation after the records have been exported to Finance systems.</inlineHelpText>
    <label>Pending Forecast Recalculation</label>
    <type>Checkbox</type>
</CustomField>