unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Sales_Order_Billing_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Billing_On_Hold__c</fullName>
    <description>Determines if the whole SO should be put on hold</description>
    <formula>CS_Sales_Order_Schedule__r.Sales_Order_Billing_On_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines if the whole SO should be put on hold</inlineHelpText>
    <label>Sales Order Billing On Hold</label>
    <type>Checkbox</type>
</CustomField>