unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Total_Billed_Amount_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Amount_To_Date__c</fullName>
    <description>Rollup Summary of Billing_Amount__con Billing Schedule Item for the current Product Configuration</description>
    <inlineHelpText>Rollup Summary of Billing_Amount__c on Billing Schedule Item for the current Product Configuration</inlineHelpText>
    <label>Total Billed Amount To Date</label>
    <summarizedField>CS_Billing_Schedule_Item__c.Billing_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed, Pending Closure</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>