unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Total_Booked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Booked_Quantity__c</fullName>
    <label>Total Booked Quantity</label>
    <summarizedField>CS_Billing_Schedule_Item__c.Booked_Quantity__c</summarizedField>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>