unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Total_Closed_Booked_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Booked_Quantity__c</fullName>
    <label>Total Closed Booked Quantity</label>
    <summarizedField>CS_Billing_Schedule_Item__c.Booked_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Is_Closed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>