unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Total_Closed_Quantity_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Quantity_To_Date__c</fullName>
    <formula>Total_Locked_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Closed Quantity To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>