unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Total_Closed_X3rd_Party_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_X3rd_Party_Actuals__c</fullName>
    <label>Total Closed 3rd Party Actuals</label>
    <summarizedField>CS_Billing_Schedule_Item__c.X3rd_Party_Actuals__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>