unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Total_Open_Billing_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Billing_Quantity__c</fullName>
    <label>Total Open Billing Quantity</label>
    <summarizedField>CS_Billing_Schedule_Item__c.Billing_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>