unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Total_Open_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Qty__c</fullName>
    <description>The total Qty of all open lines</description>
    <inlineHelpText>The total Qty of all open lines</inlineHelpText>
    <label>Total Open Qty</label>
    <summarizedField>CS_Billing_Schedule_Item__c.DFP_Actuals__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>