unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Total_Qty_In_Billing_Processes__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_In_Billing_Processes__c</fullName>
    <description>Sum of Actuals between locked and Ready</description>
    <label>Total Qty In Billing Processes</label>
    <summarizedField>CS_Billing_Schedule_Item__c.DFP_Actuals__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Locked, Pending, Ready</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>