unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Total_Remaining_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining_Forecast_Amount__c</fullName>
    <description>Sum of forecast amount for remaining lines</description>
    <inlineHelpText>Sum of forecast amount for remaining lines</inlineHelpText>
    <label>Total Remaining Forecast Amount</label>
    <summarizedField>CS_Billing_Schedule_Item__c.Forecast_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Closed, Pending Closure</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>