unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Total_Remaining_Forecast_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining_Forecast_Quantity__c</fullName>
    <description>Sum of Forecast Quantity for all lines NOT Closed / Cancelled (open)</description>
    <inlineHelpText>Sum of Forecast Quantity for all lines NOT Closed or Cancelled (open)</inlineHelpText>
    <label>Total Remaining Forecast Quantity</label>
    <summarizedField>CS_Billing_Schedule_Item__c.Forecast_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Billing_Schedule_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Tru, Closed, Pending Closure</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Billing_Schedule_Item__c.Billing_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>