unpackaged/main/default/objects/CS_Billing_Schedule__c/fields/Under_IFC__c.field-meta.xml
<CustomField>
    <fullName>Under_IFC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks if the line is under in Flight Changes.</description>
    <inlineHelpText>Marks if the line is under in Flight Changes.</inlineHelpText>
    <label>Under In Flight Change</label>
    <type>Checkbox</type>
</CustomField>